Resolve #762 (#767)
* Update value with character value

* Remove .only

* Lowercase character before updating value

* Add cypress tests covering change

* Update logic to affect both select inputs

* Update cypress

* Emphasise remove button focus

* Text change

* Revert "Update cypress"

This reverts commit 81e406de85b78dc54852bc00c78886050b71cd7c.

* Remove false positive tests

--- a/src/styles/choices.scss
+++ b/src/styles/choices.scss
@@ -74,7 +74,7 @@ $choices-icon-cross-inverse: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjEiI
     height: 20px;
     width: 20px;
     border-radius: 10em;
-    opacity: 0.5;
+    opacity: 0.25;
     &:hover,
     &:focus {
       opacity: 1;
